# fintech

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_FRONTEND_BACKEND_CONNECTION.md  fintech_comprehensive_mece.py  fintech_comprehensive_mece_only_vnstock.py  fintech_vnstock_only.py  install_xno_full.ps1  test_fintech_vnstock.py
4M_T12_2025/: 4M_Questionnaire_Scoring.xlsx
BaoCaoTaiChinh/: readme_baocaotaichinh.md
CKP/: .sh  api.py  fintech_vnstock_final.py  test_vnstock_simple.py  valuation_report_FPT_fixed.txt
CKP1_DirectXNO/: requirements_after_install_xno.txt
Gen57Metrics/: .sh  57BaseIndicators.json  57_Base_Indicators_FinAI_TT199_T112025.xlsx  57_Base_Indicators_FinAI_TT232_pretty_T112025.xlsx  57_Base_Indicators_FinAI_with_Composite_16112025.json  57_Base_Indicators_FinAI_with_Composite_16112025.xlsx  CHANGELOG.md  README1.md  README1_.md  README2.md  base_indicator.py  calculate_all_indicators.py  direct_indicator.py  indicator_calculator.py  indicator_mapper.py  indicator_registry.py  indicator_result_repository.py  main_run_batch.py  readme_gen57metrics.md  result.json  stocks_example.txt  utils_database_manager.py  utils_xlsxTemplate_to_jsonTemplate.py
Graph_25112025/: ontology.md  ontology_subgraph_DHCD.md  ontology_subgraph_bctc.md
OCR/: .md  .sh  sh.sh  (+13 more)
feature-nam/: README.md  pyproject.toml  requirement.txt
feature-nam/crawl-data/: app_preview.py  crawler_cli_high_volume.py  crawler_with_logging.py  stock_names.json
feature-nam/extract-agents/: parsed_data.csv  qwen_articles.txt
feature-nam/search-agents/: crawled_articles.txt
(+311 files in other folders)
